objects/X9902Counselor__c.object
<CustomObject>
    <description>To store detailed information about counselors who work with clients within the Agency.</description>
    <fields>
        <fullName>CMSCounselorID__c</fullName>
        <label>CMS Counselor ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorBillingMethod__c</fullName>
        <label>Counselor Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorEmailAddress__c</fullName>
        <label>Counselor Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CounselorEmpEndDate__c</fullName>
        <description>Indicates the date when the counselor&apos;s employment or contract ends.</description>
        <inlineHelpText>Enter the date when the counselor&apos;s employment or contract officially ends.</inlineHelpText>
        <label>Counselor Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CounselorEmpStartDate__c</fullName>
        <description>Indicates the date when the counselor&apos;s employment or contract begins.</description>
        <inlineHelpText>Enter the date when the counselor&apos;s employment or contract officially starts.</inlineHelpText>
        <label>Counselor Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CounselorFirstName__c</fullName>
        <label>Counselor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorHUDID__c</fullName>
        <description>Unique identifier assigned to the counselor by the Department of Housing and Urban Development (HUD).</description>
        <inlineHelpText>Enter the HUD ID assigned to the counselor by the Department of Housing and Urban Development.</inlineHelpText>
        <label>Counselor HUD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorLanguages__c</fullName>
        <label>Counselor Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swahili</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>ASL</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorLastName__c</fullName>
        <label>Counselor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorMiddleName__c</fullName>
        <label>Counselor Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorPhone__c</fullName>
        <label>Counselor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CounselorRate__c</fullName>
        <description>The rate at which the counselor&apos;s services are billed or charged, typically per hour or per session.</description>
        <inlineHelpText>Enter the billing rate at which the counselor&apos;s services are charged.</inlineHelpText>
        <label>Counselor Billing Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounselorServiceTypes__c</fullName>
        <description>Indicates the types of counseling services provided by the counselor.</description>
        <inlineHelpText>Select one or more options from the picklist to specify the types of counseling services offered by the counselor.</inlineHelpText>
        <label>Counselor Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Delinquency and Default Resolution Counseling</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage Counseling</fullName>
                </value>
                <value>
                    <fullName>Home Improvement and Rehabilitation Counseling</fullName>
                </value>
                <value>
                    <fullName>Services for Homeless Counseling</fullName>
                </value>
                <value>
                    <fullName>Financial Management/Budget Counseling</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase Counseling</fullName>
                </value>
                <value>
                    <fullName>Rental Housing Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorTrainingCertificate__c</fullName>
        <description>Indicates whether the counselor has completed training and holds a certificate in counseling or related field.</description>
        <inlineHelpText>Check this box if the counselor has completed formal training and holds a certificate in counseling or a related field</inlineHelpText>
        <label>Counselor Training Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorTrainingCourseID__c</fullName>
        <label>Counselor Training Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorTrainingDate__c</fullName>
        <label>Counselor Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CounselorTrainingDuration__c</fullName>
        <description>Indicates the duration or length of the counselor&apos;s training program.</description>
        <inlineHelpText>Enter the duration or length of the counselor&apos;s training program.</inlineHelpText>
        <label>Counselor Training Duration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounselorTrainingOrganizationOther__c</fullName>
        <description>Indicates the name of the training organization if &quot;Other&quot; is selected in the &quot;Counselor Training Organization&quot; field.</description>
        <inlineHelpText>If &quot;Other&quot; is selected in the &quot;Counselor Training Organization&quot; field, specify the name of the training organization in this field.</inlineHelpText>
        <label>Counselor Training Organization Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorTrainingOrganization__c</fullName>
        <description>Indicates the organization or entity from which the counselor received training.</description>
        <inlineHelpText>Select the organization from which the counselor received training.</inlineHelpText>
        <label>Counselor Training Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NeighborWorks America</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>La Raza</fullName>
                </value>
                <value>
                    <fullName>NCRC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorTrainingSponsorOther__c</fullName>
        <description>Indicates the name of the training sponsor if &quot;Other&quot; is selected in the &quot;Counselor Training Sponsor&quot; field.</description>
        <inlineHelpText>If &quot;Other&quot; is selected in the &quot;Counselor Training Sponsor&quot; field, specify the name of the training sponsor in this field.</inlineHelpText>
        <label>Counselor Training Sponsor Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorTrainingSponsor__c</fullName>
        <description>Indicates the entity sponsoring the counselor&apos;s training program.</description>
        <inlineHelpText>Enter the name of the entity sponsoring the counselor&apos;s training program.</inlineHelpText>
        <label>Counselor Training Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorTrainingTitle__c</fullName>
        <label>Counselor Training Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementType__c</fullName>
        <label>Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Training Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StaffTrainingAttendance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Training Attendance</label>
        <referenceTo>CounselorTraining__c</referenceTo>
        <relationshipLabel>9902 Counselor</relationshipLabel>
        <relationshipName>X9902_Counselor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X9902_Counselor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X9902__c</fullName>
        <label>9902</label>
        <referenceTo>X9902__c</referenceTo>
        <relationshipLabel>9902 Counselor</relationshipLabel>
        <relationshipName>X9902_Counselor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>9902 Counselor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>99-{00000}</displayFormat>
        <label>9902 Counselor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9902 Counselor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>